--- a/src/components/Profile/styles.css
+++ b/src/components/Profile/styles.css
@@ -1,8 +1,8 @@
 .header-image {
     position: relative;
     width: 100%;
-    height: 240px; /* Adjust as needed */
-    overflow: hidden; /* Prevent blur from bleeding out */
+    height: 240px;
+    overflow: hidden;
     z-index: 0;
   }
   
@@ -14,8 +14,8 @@
   }
   
   .profile-picture-container {
-    position: relative; /* Position relative to its parent */
-    margin-top: -90px; /* Adjust to overlap the blurred header */
+    position: relative;
+    margin-top: -90px;
     display: flex;
     justify-content: center;
   }
@@ -29,12 +29,12 @@
   
   .profile-info {
     position: relative;
-    margin-top: -35px; /* Pull the username closer to the profile picture */
-    z-index: 2; /* Ensure it's above the blurred image */
+    margin-top: -35px;
+    z-index: 2;
   }
   
   .profile-info h1 {
-    margin-top: 50px; /* Adjust the spacing below the profile picture */
+    margin-top: 50px;
   }
   
   .user-type {
@@ -53,19 +53,19 @@
 
   #carousel-wrapper {
     position: relative;
-    overflow: hidden; /* Prevent content overflow */
+    overflow: hidden;
     max-width: 100%;
   }
 
   
   #carousel {
-    gap: 10px; /* Space between items */
-    overflow-x: auto; /* Horizontal scrolling */
+    gap: 10px;
+    overflow-x: auto;
     max-width: 100%;
   }
 
 #carousel::-webkit-scrollbar {
-   display: none; /* Hide scrollbar */
+   display: none;
     }
 
 #carousel-fade-left {
@@ -85,9 +85,9 @@
 }
 
 .recent-post-card {
-    width: 500px; /* Fixed width for each card */
-    min-width: 100px; /* Prevent cards from being smaller than this */
-    box-sizing: border-box; /* Consistent sizing with padding/border */
+    width: 500px;
+    min-width: 100px;
+    box-sizing: border-box;
     background-color: #1a1a40;
     text-align: center;
     padding: 10px;
@@ -97,9 +97,9 @@
 .follower-card,
 .following-card,
 .game-card {
-    width: 100px; /* Fixed width for each card */
-    min-width: 100px; /* Prevent cards from being smaller than this */
-    box-sizing: border-box; /* Consistent sizing with padding/border */
+    width: 100px;
+    min-width: 100px;
+    box-sizing: border-box;
     background-color: #1a1a40;
     text-align: center;
     padding: 10px;
