--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,9 +1,8 @@
-/* Global Styles */
 body,html {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  background-color: #1a1a40; /* Midnight blue */
+  background-color: #1a1a40;
 }
 
 #bs-home {
